2017-10-08  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Modify genericListener.listeners.execute function.

2017-10-07  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Modify makeExecuteMessage function.

	* tryXpath/background/try_xpath_background.js:
	Modify this file. The add-on inserts css to all frames and removes
	css from all frames.
	Rename frameSpecification to frameDesignation.

	* tryXpath/scripts/try_xpath_content.js:
	Define getFrames function.
	Define currentFrames variable.

	* tryXpath/scripts/try_xpath_functions.js:
	Define getFrameAncestry function.
	Define isNumberArray function.

2017-10-06  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Remove cssInserted variable.
	Define currentCss and expiredCssSet.
	Modify genericListener.listeners.finishInsertCss function.
	Define updateCss function.
	Define genericListener.listeners.finishRemoveCss function.
	Define handleCssChange function.

	* tryXpath/background/try_xpath_background.js:
	Remove genericListener.listeners.insertCss function.
	Define genericListener.listeners.updateCss function.

	* tryXpath/scripts/try_xpath_content.js:
	Define originalAttributes variable.
	Define setAttr function.
	Define setIndex function.
	Remove removeAttrs function.
	Define restoreAttrs function.
	Add storage.onChanged listener.

	* tryXpath/scripts/try_xpath_functions.js:
	Change saveAttrForItem function arguments.
	Change saveAttrForItems function arguments.
	

2017-10-05  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_functions.js:
	Define saveAttrForItem function.
	Define saveAttrForItems function.
	Define restoreItemAttrs function.

	* tryXpath/css/try_xpath_insert.css
	Modify this file.

2017-10-04  larissa9839  <larissa9839@gmail.com>

	* tryXpath/background/try_xpath_background.js:
	Modify this file. This file load attributes instead of classes.
	Remove classes variable.
